@@ -80,6 +80,11 @@ module DeliveryBoy
       instance.deliver_messages
     end
 
+    # Clear any buffered messages generated by {.produce} or {.produce!} methods.
+    def clear_buffer
+      instance.clear_buffer
+    end
+
     # Shut down DeliveryBoy.
     #
     # Automatically called when the process exits.
